k8s/web-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
spec:
  type: NodePort
  selector:
    name: my-app
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30003
